--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ apt-p2p (0.1.6) unstable; urgency=low
 
   * Fix a lot of lintian warnings and errors
     - Update standards version to 3.8.4 (no changes)
+  * Fix various documentation issues
+    (Closes: #518590, #518549, #518548, 518550)
 
- -- Cameron Dale <camrdale@gmail.com>  Sat, 20 Mar 2010 22:48:07 -0700
+ -- Cameron Dale <camrdale@gmail.com>  Sat, 20 Mar 2010 23:26:24 -0700
 
 apt-p2p (0.1.5) unstable; urgency=low
 
