--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 apt-p2p (0.1.7) unstable; urgency=low
 
   * Change the module location of the apt OpProgress class (Closes: #641732)
+  * Fix some Lintian warnings
 
- -- Cameron Dale <camrdale@gmail.com>  Sat, 17 Sep 2011 16:03:32 -0700
+ -- Cameron Dale <camrdale@gmail.com>  Sat, 17 Sep 2011 16:05:31 -0700
 
 apt-p2p (0.1.6) unstable; urgency=low
 
